--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "main": "dist/vue-html5-editor.js",
   "scripts": {
-    "build": "webpack --progress --hide-modules",
+    "build": "webpack --watch --progress --hide-modules",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -21,21 +21,22 @@
   "author": "peak",
   "license": "Apache-2.0",
   "devDependencies": {
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-preset-es2015": "^6.13.2",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.16.0",
     "babel-runtime": "^6.11.6",
-    "css-loader": "^0.23.1",
-    "file-loader": "^0.8.5",
-    "less": "^2.6.1",
+    "css-loader": "^0.25.0",
+    "file-loader": "^0.9.0",
+    "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "url-loader": "^0.5.7",
-    "vue": "^1.0.26",
+    "vue": "^1.0.28",
     "vue-hot-reload-api": "^1.3.2",
     "vue-html-loader": "^1.2.2",
+    "vue-loader": "^8.5.4",
     "vue-router": "^0.7.13",
     "vue-style-loader": "^1.0.0",
-    "webpack": "^1.13.0"
+    "webpack": "^1.13.2"
   }
 }
